# crema

./: .gitignore  .travis.yml  .travis_dependencies.sh  LICENSE.md  README.md  setup.cfg  setup.py
.github/: environment-ci.yml
.github/workflows/: ci.yml  publish.yml
crema/: __init__.py  analyze.py  exceptions.py  layers.py  utils.py
crema/models/: __init__.py  base.py  beat  beat.py  chord  chord.py
docs/: Makefile  analyze.rst  changes.rst  conf.py  index.rst  models.rst  utils.rst
tests/: test_analyzer.py  test_chord.py  test_util.py
training/: README.md
training/beats/: 00-setup.py  01-prepare.py  02-train.py  index_test.json  index_train.json  requirements.txt
training/beats/resources/: model.h5  model_spec.pkl  muda.pkl  pump.pkl  version.txt
training/chords/: 00-setup.py  01-prepare.py  02-train.py  02-train_decoder.py  03-evaluate.py  README.md  index_test.json  index_train.json  metadata_test.json  metadata_train.json  requirements.txt
training/chords/resources/: model_spec.pkl  muda.pkl  pump.pkl  test_scores.json  version.txt
