[tool:pytest]
addopts = -v --cov-report term-missing --cov crema --cov-report=xml


[metadata]
name = crema
version = attr: crema.version.version
description = Convolutional-recurrent estimators for music analysis
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Brian McFee
url = https://github.com/bmcfee/crema
download_url = https://github.com/bmcfee/crema/releases
license = ISC
license_file = LICENSE.md
license_file_content_type = text/markdown; charset=UTF-8
project_urls = 
    Source = https://github.com/bmcfee/crema
    Download = https://github.com/bmcfee/crema/releases
classifiers
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_package_data = True
python_requires >= 3.6
install_requires =
    six
    librosa>=0.8
    jams>=0.3
    scikit-learn>=0.18
    keras>=2.6
    tensorflow>=2.0
    mir_eval>=0.5
    pumpp>=0.6
    h5py>=2.7

[options.package_data]
crema = models/*/*.*

[options.extras_require]
docs = 
    numpydoc
    sphinx
tests = 
    pytest
    pytest-cov
training =
    pescador >= 2.0.1
    muda
